# Prusa-Connect-SDK-Printer

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .pylintrc  .style.yapf  .travis.yml  ChangeLog  MANIFEST.in  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-tests.yml
docs/: Makefile  example.py  manipulator_states.txt  prusa-link_states.txt  state.txt
prusa/connect/printer/: __init__.py  camera.py  camera_config.py  camera_configurator.py  camera_controller.py  camera_driver.py  cameras.py  clock.py  command.py  conditions.py  connection.py  const.py  download.py  errors.py  events.py  files.py  metadata.py  models.py  pkg_info.py  printer.py  types.py  util.py
tests/: conftest.py  test_cameras.py  test_clock.py  test_command.py  test_conditions.py  test_connection.py  test_download.py  test_errors.py  test_events.py  test_files.py  test_metadata.py  test_mmu.py  test_printer.py  test_telemetry.py  util.py
tests/gcodes/metadata/: .fdn_filename.gcode.cache  fdn_filename.gcode.cache  fdn_filename_empty.gcode  fdn_filename_empty_test.gcode  fdn_filename_empty_test.gcode.cache  fdn_filename_no_key.gcode  fdn_filename_test.gcode.cache  fdn_full_0.25mm_PETG_MINI_2h9m.gcode  pentagonal-hexecontahedron-1.sl1
